--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>🧿 Hikmat Bladi</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">Browse</a>
+        <a href="browse.html">Browse</a>
         <a href="submit.html">Submit</a>
         <a href="about.html">About</a>
       </nav>
