--- a/submit.html
+++ b/submit.html
@@ -20,7 +20,7 @@
 
   <main class="container">
     <h2>Submit Your Favorite Moroccan Proverb</h2>
-    <form action="#" method="POST">
+    <form class="proverb-form" action="#" method="POST">
       <label for="proverb">Proverb in Arabic:</label><br>
       <input type="text" id="proverb" name="proverb" required><br><br>
 
