--- a/submit.html
+++ b/submit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Submit a Proverb - Hikmat Bladi</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="submit_style.css">
 </head>
 <body>
   <header>
