--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <h3>👥 Our Team</h3>
       <ul class="team-list">
         <li><strong>Zakaria El Kouissi</strong></li>
-        <li><strong>Ahmed Mohamed Amine</strong></li>
+        <li><strong>Anouar Ahmed Amine</strong></li>
         <li><strong>Souhayla Arroubi</strong></li>
       </ul>
     </div>
